fix: border overlap in discovery page

--- a/src/theme/pages/_discovery.scss
+++ b/src/theme/pages/_discovery.scss
@@ -1,8 +1,13 @@
 .theme-midnight {
     .container_cbd375,
     .scroller__23746,
-    .headerBar__8a7fc {
+    .backdrop__8a7fc,
+    .headerBar__8a7fc.relative__8a7fc {
         border-left: 1px solid var(--app-border-frame);
+    }
+    // Prevent horizontal scrolling caused by the header bar's left border. Also hides the horizontal scrollbar on small screens.
+    .headerBar__8a7fc.overlay__8a7fc {
+        overflow: hidden;
     }
     .relative__8a7fc {
         border-bottom: 1px solid var(--app-border-frame);
